--- a/p1.md
+++ b/p1.md
@@ -37,7 +37,19 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus ni
 
 ## Task Descriptions
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+Brent is a tech savvy individual who enjoys being outdoors and learning about nature around him. He starts walking in Fish Creek Park and sees a flower that draws his attention. He wants to get out his field guide and determine the common name (doesn’t care about the scientific name), whether it is common or rare, if it is a native flower or if it was brought to this location by others, if it is invasive poisonous/harmful, any interesting facts or stories surrounding this flower (like corpse plant that doesn’t bloom annually and smells like rotting flesh). He would like to save an image of it with a date stamp, month, day, year, time and location and be able to share it to friends.
+
+Lorraine is a senior who enjoys being outdoors and gardening. She sees a flower she likes in Glenmore Park and stops to take a picture. She wants to be able to identify it on the spot rather than take it home and look it up. She wants to be able to share it with friends and family and also save it to keep a record of what she has seen. She would also like to be able to determine whether she can plant it at home in her own garden. As she is not tech savvy, a tutorial to walk her through how to use the app would be beneficial.
+
+Alyssa is a woman in her twenties who loves going on hikes. She goes on a hike and wants to be able to see multiple images of flowers and also see magnified images to distinguish certain flowers that may look alike. Since it’s hard to describe what she’s looking at she would like to be able to narrow down the search results using filters such as Colour and Number of Petals.
+Wesley is a male in his twenties who likes going for walks. He sees a flower he would like to identify but it is not in full bloom. He would like to see images of the life stages of the flower in order to be able to identify the flower at different stages of it’s life correctly.
+
+Mary is a mother who just took her family on a hiking trip. She took pictures on the trip and would like to add their sightings of specific flowers to a map. When adding the sightings she would like it to be added with the date she saw the wildflower rather than the date that she adds the sighting. She would rather have it show the date the sighting occurred so that when using the app to check for sightings they are more accurate.  So maybe a date editing button would be useful.
+
+Paul is teenager who enjoys researching flowers. He goes to parks and finds flowers that he likes and would like to add his favourites to a list so that he can keep track of them and be able to bring up the description of it easily at a later time. 
+
+
+## References
 
 <!-- 
 ## Resources
