Updated research method section

--- a/p1.md
+++ b/p1.md
@@ -16,7 +16,9 @@ _discuss the user research methods you used, provide justification for them_ Lor
 
 ![](http://lorempixel.com/1200/300/ "Motivational image")
 
-_summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+
+
+
 
 ### User Research Method 2: ...
 
@@ -29,7 +31,94 @@ _summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. D
 ![](http://lorempixel.com/550/450 "First of two kittens")
 ![](http://lorempixel.com/550/450 "Second of two kittens")
 
-_summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+Justification: One of the best ways to determine what end users need in an app, is to have them use a similar system and then interview them to determine what worked, what didn’t work, and what they would like to see in a better app. Therefore, the Extreme User Interviews Research Method would be a great way to collect information in order to make a wildflower app that encompasses what different users of the app would want.
+
+Method Description: Two potential users were identified and were given an existing wildflower app and then were asked to describe their user experience with the app. First, before using the app, they were asked what their process would be for identifying a flower they had found. Next, they were given the app and asked to identity flowers using it. We watched how they used the app and then discussed with them afterwards about what they found worked well and what difficulties they encountered. Lastly, they were asked to be critical of the system and give insight into a better design for a wildflower app.
+
+Major Findings:
+
+Interviewee #1:
+
+Brent, Male Adult, Average user of the following field guides: Birds, Dinosaur Bones, Rocks, Marine Life, and museums. Enjoys being outdoors and learning about things in nature that he discovers.
+
+Grade the interviewee gave the app they tested: 8/10
+
+What Worked:
+
+·       Able to narrow down results easily using predefined categories including time and place
+·       Served its purpose in identifying wildflowers
+·       Images are great as it allows him to confirm the flower he found is the same one
+·       After selecting certain aspects of the flowers, the results were narrowed down quickly
+·       Liked having all the options on one page
+
+What Did Not Work:
+
+·       Not universal
+o   He found that the app would be more meaningfully if the app could take his current location and then he could pick the type of flower from the type of flowers that are in that area.
+·     Found the apps design not very appealing and very amateur looking. He would like an app that is more stylish with high usability.
+·     Found it was very cluttered
+·     Didn’t understand some of the habitat categories
+·     Didn’t know how to unselect an option he had chosen at first
+o   Chose the yellow colour then was unsure of how to unselect it.
+·     Some flowers had more info than others
+o   He found that one had Photos, Info, Map, Description, Links
+o   A second one he found only had Info, Map, Links (no pictures to verify, or description)
+·     Felt like it was designed by someone with no artistic ability.
+·     Flower colours symbols are unclear.
+o   Should be solid colours and have option to choose multiple colours.
+·     Alternative leaves is unclear
+·     Description has a lot of information that is not relevant to field guide users for identification purposes.
+·     Doesn’t like the links section. Doesn’t want to have to leave the app in order to get more information
+Wish List for a new wildflower app:
+·     Rarity Colour Code: A colour coding system to determine rarity of flower. (Purple for super rare, red for rare…)
+·     Interesting facts about the flower. Should he be interested in it or not? Is it a national or provincial flower, healing properties,
+·     Sharing it with others if it is rare or interesting
+·     Colour of the flower and location are the most important in identifying the flower.
+·     Is the flower poisonous, or are there similar looking flowers that might be potentially dangerous to touch, taste, smell, etc…
+Interviewee #2:
+
+Lorraine, Senior, Amateur User. Enjoys being outdoors and learning more about her surroundings. Uses field guides in book format at home to identify birds. Not tech savvy.
+
+Grade the interviewee gave the app they tested: 7/10
+
+What Worked:
+
+·       Description is very detailed
+·       Using images to identify
+·       Using number of petals, size, colour, structure, leaves to identify
+·       Served it’s purpose in identifying wildflowers
+
+What Did Not Work:
+
+·       Map was not helpful at all
+o   Very hard to determine where the flower was located
+·       Couldn’t see the images very well when choosing the types of leaves to narrow the search
+·       Unsure of how to use it. Touching or swiping on the screen, what buttons can be pressed.
+·       Missing a lot of text.
+o   Doesn’t say items on screen can just be selected
+o   Doesn’t say that you can select the flower to get more information
+·       Could be laid out better
+·       Easier to have it labeled
+·       Info and description are too similar. It is unclear of what each link it going to contain
+·       Links should be relevant to location and flower
+
+Wish List for a new wildflower app:
+
+·       Are you able to collect it?
+·       Where did it get it’s name from
+·       Can you plant that certain type at home?
+o   Info on planting:
+§  Does it need lots of sun, water
+§  Perennial or annual
+·       Pronunciation
+·       Is it edible? For animals and humans
+·       Is it poisonous?
+·       Tutorial on how to use it
+·       Send picture to friends/ family
+·       Take a picture and save it
+·       Individuals to contact to get more info
+ 
+  It was very interesting to see that the potential users identified a lot more issues and items they would like to see instead of what they actually liked about the system. We think that goes to show that when a design is good, people tend not to notice. But if the design is bad or missing items, it tends to stick out to users and hurt the overall experience. So determining things that didn’t work out is similar apps plays very important role in developing a better user-friendly app.  Being critical is very efficient in learning how to develop a better app. A list of items that were left out of similar apps is also helpful in designing our app.
 
 ### Reflections on User Research
 
