Changes to Research method section

--- a/p1.md
+++ b/p1.md
@@ -13,9 +13,8 @@ _provide a list of stakeholders, and describe them as they relate to the design 
 _discuss the user research methods you used, provide justification for them_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
 
 ### User Research Method 1: ...
-
+\
 ![](http://lorempixel.com/1200/300/ "Motivational image")
-
 
 
 
@@ -25,7 +24,7 @@ _discuss the user research methods you used, provide justification for them_ Lor
 ![](http://lorempixel.com/1200/300/ "Motivational image")
 
 _summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
-
+ 
 ### User Research Method 3: ...
 
 ![](http://lorempixel.com/550/450 "First of two kittens")
@@ -36,7 +35,6 @@ Justification: One of the best ways to determine what end users need in an app, 
 Method Description: Two potential users were identified and were given an existing wildflower app and then were asked to describe their user experience with the app. First, before using the app, they were asked what their process would be for identifying a flower they had found. Next, they were given the app and asked to identity flowers using it. We watched how they used the app and then discussed with them afterwards about what they found worked well and what difficulties they encountered. Lastly, they were asked to be critical of the system and give insight into a better design for a wildflower app.
 
 Major Findings:
-
 Interviewee #1:
 
 Brent, Male Adult, Average user of the following field guides: Birds, Dinosaur Bones, Rocks, Marine Life, and museums. Enjoys being outdoors and learning about things in nature that he discovers.
@@ -45,17 +43,17 @@ Grade the interviewee gave the app they tested: 8/10
 
 What Worked:
 
-·       Able to narrow down results easily using predefined categories including time and place
-·       Served its purpose in identifying wildflowers
-·       Images are great as it allows him to confirm the flower he found is the same one
-·       After selecting certain aspects of the flowers, the results were narrowed down quickly
-·       Liked having all the options on one page
+* Able to narrow down results easily using predefined categories including time and place
+* Served its purpose in identifying wildflowers
+* Images are great as it allows him to confirm the flower he found is the same one
+* After selecting certain aspects of the flowers, the results were narrowed down quickly
+* Liked having all the options on one page
 
 What Did Not Work:
 
-·       Not universal
-o   He found that the app would be more meaningfully if the app could take his current location and then he could pick the type of flower from the type of flowers that are in that area.
-·     Found the apps design not very appealing and very amateur looking. He would like an app that is more stylish with high usability.
+* Not universal
+  * He found that the app would be more meaningfully if the app could take his current location and then he could pick the type of flower from the type of flowers that are in that area.
+*Found the apps design not very appealing and very amateur looking. He would like an app that is more stylish with high usability.
 ·     Found it was very cluttered
 ·     Didn’t understand some of the habitat categories
 ·     Didn’t know how to unselect an option he had chosen at first
