Updated Reflections of User Research

--- a/p1.md
+++ b/p1.md
@@ -128,7 +128,7 @@ It was very interesting to see that the potential users identified a lot more is
 
 ### Reflections on User Research
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+_Extreme User Interviews:_ Using the Extreme User Interviews Research Method was very helpful in getting a lot of feedback about what user’s like, don’t like and what they would like to see differently in a wildflower app. Even with only two people interviewed, a lot of information was collected which will give us insight into designing the app. I believe having more time to contact different users would have been beneficial in collecting a wider range of likes and dislikes. Also, having multiple apps that the potential users could try would allow for more feedback in relation to different designs and have users find more key issues using different systems. It was easy to have the user explore the system in order to find issues and then evaluate their experience using it. I think the users were more critical of the system than they would have been if they didn’t know I was going to be asking about their experience with it. Also, since they knew we did not create the app, they were more willing to share their negative experiences with the wildflower app. If I had to do this research method again, I would like to give the potential users more time to use the app, so that they would not feel rushed and could have more time to give feedback.
 
 ## Task Descriptions
 
