--- a/p1.md
+++ b/p1.md
@@ -37,13 +37,13 @@ _Method Description:_ Two potential users were identified and were given an exis
 
 _Major Findings:_
 
-Interviewee #1:
+__Interviewee #1:__
 
 Brent, Male Adult, Average user of the following field guides: Birds, Dinosaur Bones, Rocks, Marine Life, and museums. Enjoys being outdoors and learning about things in nature that he discovers.
 
 Grade the interviewee gave the app they tested: 8/10
 
-What Worked:
+_What Worked:_
 
 * Able to narrow down results easily using predefined categories including time and place
 * Served its purpose in identifying wildflowers
@@ -51,7 +51,7 @@ What Worked:
 * After selecting certain aspects of the flowers, the results were narrowed down quickly
 * Liked having all the options on one page
 
-What Did Not Work:
+_What Did Not Work:_
 
 * Not universal
   * He found that the app would be more meaningfully if the app could take his current location and then he could pick the type of flower     from the type of flowers that are in that area.
@@ -70,7 +70,7 @@ What Did Not Work:
 * Description has a lot of information that is not relevant to field guide users for identification purposes.
 * Doesn’t like the links section. Doesn’t want to have to leave the app in order to get more information
 
-Wish List for a new wildflower app:
+_Wish List for a new wildflower app:_
 
 * Rarity Colour Code: A colour coding system to determine rarity of flower. (Purple for super rare, red for rare…)
 * Interesting facts about the flower. Should he be interested in it or not? Is it a national or provincial flower, healing properties
@@ -78,20 +78,20 @@ Wish List for a new wildflower app:
 * Colour of the flower and location are the most important in identifying the flower.
 * Is the flower poisonous, or are there similar looking flowers that might be potentially dangerous to touch, taste, smell, etc…
 
-Interviewee #2:
+__Interviewee #2:__
 
 Lorraine, Senior, Amateur User. Enjoys being outdoors and learning more about her surroundings. Uses field guides in book format at home to identify birds. Not tech savvy.
 
 Grade the interviewee gave the app they tested: 7/10
 
-What Worked:
+_What Worked:_
 
 * Description is very detailed
 * Using images to identify
 * Using number of petals, size, colour, structure, leaves to identify
 * Served it’s purpose in identifying wildflowers
 
-What Did Not Work:
+_What Did Not Work:_
 
 * Map was not helpful at all
   * Very hard to determine where the flower was located
@@ -105,7 +105,7 @@ What Did Not Work:
 * Info and description are too similar. It is unclear of what each link it going to contain
 * Links should be relevant to location and flower
 
-Wish List for a new wildflower app:
+_Wish List for a new wildflower app:_
 
 * Are you able to collect it?
 * Where did it get it’s name from
