added project idea

--- a/p1.md
+++ b/p1.md
@@ -2,7 +2,14 @@
 
 ## Project Idea
 
-_a succinct description of your project idea, how you expect your system to be used, by whom, and the context under which you expect it to be used_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+#A guide to identify, learn and share Alberta’s 1000+ species of wildflowers. Enjoy all the familiarities of a traditional paper field guide, with more images and species information. Foster a community via the app, where users can share sightings, images and connect with each other.
+ 
+Plants can be identified by either searching key plant characteristics (color, petal shape, etc) and location or by using our automatic recognition system. By utilizing our image recognition with our innovative scent recognition, plants can be identified in a fraction of the time. A user will be able to easily search through images to find a wildflower and any information related to it that they are looking for. Pictures taken and information about a plant’s location/characteristics can be shared with others by pinpointing sightings on a global map. This is a great feature for finding rarer species. The app also includes a glossary of terms, maps and help menu.
+ 
+This app is targeted to anyone interested in identifying wildflowers in Alberta. The text descriptions are easy enough for a beginner to understand but with the option to expand for more detailed scientific information for more advanced users.
+ 
+Take this app out on an evening stroll in a nearby field or on a hike in one of Alberta’s national parks. With internet connection, you can share and update sighting locations on a map in real time, and use our automatic recognition tools. Or use the app offline with the searching key tool. People of all ages and backgrounds can enjoy and learn about Alberta’s stunning collection of wildflowers with this app.  
+
 
 ## Stakeholders and Users
 
