--- a/p1.md
+++ b/p1.md
@@ -2,7 +2,7 @@
 
 ## Project Idea
 
-#A guide to identify, learn and share Alberta’s 1000+ species of wildflowers. Enjoy all the familiarities of a traditional paper field guide, with more images and species information. Foster a community via the app, where users can share sightings, images and connect with each other.
+A guide to identify, learn and share Alberta’s 1000+ species of wildflowers. Enjoy all the familiarities of a traditional paper field guide, with more images and species information. Foster a community via the app, where users can share sightings, images and connect with each other.
  
 Plants can be identified by either searching key plant characteristics (color, petal shape, etc) and location or by using our automatic recognition system. By utilizing our image recognition with our innovative scent recognition, plants can be identified in a fraction of the time. A user will be able to easily search through images to find a wildflower and any information related to it that they are looking for. Pictures taken and information about a plant’s location/characteristics can be shared with others by pinpointing sightings on a global map. This is a great feature for finding rarer species. The app also includes a glossary of terms, maps and help menu.
  
