Added Fish Creek Park Image

--- a/p1.md
+++ b/p1.md
@@ -35,7 +35,8 @@ _summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. D
  
 ### User Research Method 3: ...
 
-![](http://lorempixel.com/550/450 "First of two kittens")
+![](https://github.com/kowther/FieldGuide-481/blob/master/6.jpg)
+_Entrance to Fish Creek Park, Bebo Grove_
 ![](http://lorempixel.com/550/450 "Second of two kittens")
 
 _Justification:_ One of the best ways to determine what end users need in an app, is to have them use a similar system and then interview them to determine what worked, what didn’t work, and what they would like to see in a better app. Therefore, the Extreme User Interviews Research Method would be a great way to collect information in order to make a wildflower app that encompasses what different users of the app would want.
