Added photo's from the Extreme User Interviews

--- a/p1.md
+++ b/p1.md
@@ -37,11 +37,20 @@ _summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. D
 
 ![](https://github.com/kowther/FieldGuide-481/blob/master/6.jpg)
 _Entrance to Fish Creek Park, Bebo Grove_
-![](http://lorempixel.com/550/450 "Second of two kittens")
+![](https://github.com/kowther/FieldGuide-481/blob/master/5.jpg)
+_Wildflower located in Fish Creek Park, Bebo Grove_
+![](https://github.com/kowther/FieldGuide-481/blob/master/2.jpg)
+_Interviewee Brent getting ready to use the Alberta Wildlife App_
+![](https://github.com/kowther/FieldGuide-481/blob/master/2.jpg)
+_Interviewee Brent correctly identified the Buffalo Bean Wildflower in Fish Creek Park_
+![](https://github.com/kowther/FieldGuide-481/blob/master/3.jpg)
+_Interviewee Lorraine getting ready to use the Alberta Wildlife App_
+![](https://github.com/kowther/FieldGuide-481/blob/master/7.jpg)
+_Interviewee Lorraine correctly identified the Canadian Bunchberry. (This was completed indoors as there was a rain storm the day we did the interview. An image of the Canadian Bunchberry that is located in Fish Creek Park was printed and used to identify from.)_
 
 _Justification:_ One of the best ways to determine what end users need in an app, is to have them use a similar system and then interview them to determine what worked, what didn’t work, and what they would like to see in a better app. Therefore, the Extreme User Interviews Research Method would be a great way to collect information in order to make a wildflower app that encompasses what different users of the app would want.
 
-_Method Description:_ Two potential users were identified and were given an existing wildflower app and then were asked to describe their user experience with the app. First, before using the app, they were asked what their process would be for identifying a flower they had found. Next, they were given the app and asked to identity flowers using it. We watched how they used the app and then discussed with them afterwards about what they found worked well and what difficulties they encountered. Lastly, they were asked to be critical of the system and give insight into a better design for a wildflower app.
+_Method Description:_ Two potential users were identified and were given an existing wildflower app and then were asked to describe their user experience with the app. First, before using the app, they were asked what their process would be for identifying a flower they had found. Next, they were given the app and asked to identity flowers using it. One of the interviews was conducted indoors as there was a rain storm the day of the interview and we were unable to go into the field to do the interview. For this interview the interviewee Lorraine was given a photo of a wildflower that is located in Fish Creek Park and was asked to identify it using the Alberta Wildlife App and then explain her experience using the app. The other interview, with interviewee Brent was conducted in Fish Creek Park, Bebo Grove. We watched how both users used the app and then discussed with them afterwards about what they found worked well and what difficulties they encountered. Lastly, they were asked to be critical of the system and give insight into a better design for a wildflower app.
 
 _Major Findings:_
 
@@ -129,9 +138,7 @@ _Wish List for a new wildflower app:_
 * Take a picture and save it
 * Individuals to contact to get more info
   
-  
-  
-  
+
 It was very interesting to see that the potential users identified a lot more issues and items they would like to see instead of what they actually liked about the system. We think that goes to show that when a design is good, people tend not to notice. But if the design is bad or missing items, it tends to stick out to users and hurt the overall experience. So determining things that didn’t work out is similar apps plays very important role in developing a better user-friendly app.  Being critical is very efficient in learning how to develop a better app. A list of items that were left out of similar apps is also helpful in designing our app.
 
 ### Reflections on User Research
