Minor grammar changes made

--- a/p1.md
+++ b/p1.md
@@ -50,7 +50,7 @@ _Interviewee Lorraine correctly identified the Canadian Bunchberry. (This was co
 
 _Justification:_ One of the best ways to determine what end users need in an app, is to have them use a similar system and then interview them to determine what worked, what didn’t work, and what they would like to see in a better app. Therefore, the Extreme User Interviews Research Method would be a great way to collect information in order to make a wildflower app that encompasses what different users of the app would want.
 
-_Method Description:_ Two potential users were identified and were given an existing wildflower app and then were asked to describe their user experience with the app. First, before using the app, they were asked what their process would be for identifying a flower they had found. Next, they were given the app and asked to identity flowers using it. One of the interviews was conducted indoors as there was a rain storm the day of the interview and we were unable to go into the field to do the interview. For this interview the interviewee Lorraine was given a photo of a wildflower that is located in Fish Creek Park and was asked to identify it using the Alberta Wildlife App and then explain her experience using the app. The other interview, with interviewee Brent was conducted in Fish Creek Park, Bebo Grove. We watched how both users used the app and then discussed with them afterwards about what they found worked well and what difficulties they encountered. Lastly, they were asked to be critical of the system and give insight into a better design for a wildflower app.
+_Method Description:_ Two potential users were identified and given an existing wildflower app and then asked to describe their user experience with the app. First, before using the app, they were asked what their process would be for identifying a flower they had found. Next, they were given the app and asked to identity flowers they found using it. One of the interviews was conducted indoors as there was a rain storm the day of the interview and we were unable to go into the field to do the interview. For this interview, the interviewee Lorraine, was given a photo of a wildflower that is located in Fish Creek Park and was asked to identify it using the Alberta Wildlife App and then explain her experience using the app. The other interview, with interviewee Brent, was conducted at Bebo Grove in Fish Creek Park. We observed how both users used the app and then discussed with them afterwards about what they found worked well and what difficulties they encountered. Lastly, they were asked to be critical of the system and give insight into a better design for a wildflower app.
 
 _Major Findings:_
 
