Added interview section

--- a/p1.md
+++ b/p1.md
@@ -27,11 +27,34 @@ _summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. D
 
 
 
-### User Research Method 2: ...
+### User Research Method 2: Interview
 
-![](http://lorempixel.com/1200/300/ "Motivational image")
+![](https://github.com/kowther/FieldGuide-481/blob/master/interview03.jpg)
 
-_summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+_Interviewees Alyssa and Wesley_
+
+![](https://github.com/kowther/FieldGuide-481/blob/master/interview04.jpg)
+
+_Interviewee Alyssa showing her favourite field guides_
+
+![](https://github.com/kowther/FieldGuide-481/blob/master/interview05.jpg)
+
+_Interviewer Stephanie and interviewee Alyssa_
+
+Raw notes from interview:
+* [Page 1](https://github.com/kowther/FieldGuide-481/blob/master/interview01.jpg)
+* [Page 2](https://github.com/kowther/FieldGuide-481/blob/master/interview02.jpg)
+
+_Justification_: Since a potential user of our system is interested in wildflowers but might not have a lot of technical knowledge about them, we wanted to gain insight from someone whose experience with plants is mostly recreational. Our main goal for the interview was to find out what tools they use to find information, and what they like or dislike about the resources that currently exist.
+ 
+_Method description_: We interviewed Alyssa and Wesley, a couple in their twenties who are passionate about nature, specifically plants. They love going for walks and hikes. Aside from one semester of Horticulture class in high school, neither of them has any formal education about wildflowers or plants in general; however, they own several books on flowers and other plants that they use to teach themselves for fun. They currently don’t use any wildlife apps. We felt that it would be helpful to interview them to gain insight from people who are interested in plants (specifically, plant identification) without having an academic background on the subject. We interviewed them in their home. I recorded the audio from the interview so that I would not have to write down responses word-for-word. I only made quick handwritten notes to refer to insights that I thought were the most significant, so that I would know what to listen for when I played back the audio later.
+ 
+_Major findings_: Many plants look similar but are very different in other less visible characteristics, so relying on visual characteristics alone is not always the best when it comes to identifying a plant. Feeling, smelling, and sometimes tasting the plant can also provide valuable information that can be used for identification. Alyssa also noted that many guides only provide one image of the flower, when it might also be helpful to be able to examine magnified images of the leaves, petals, or stems. Wesley also added that a flower may look different depending on its current stage in life, so perhaps including images of its various life stages might be helpful (since people do not always come across a flower when it is in full bloom).
+ 
+Guides also vary widely in the way that plants are organized. One of Alyssa’s favourite books on plant identification had the plants organized in alphabetical order; another book that she liked had the plants organized by categories such as “medicinal.” She noted that alphabetical order is nice when she already knows what she’s looking for and just wants to learn more about it. Otherwise, she usually flips through the pages and looks at pictures/reads descriptions until finding something that seems right. I asked her what she might type into a Google search on her phone if she was outside and wanted to identify a flower, and she mentioned that a lot of people don’t exactly know what words to use to describe what they mean in the first place. Leaving users to come up with descriptive words on their own might lead them to struggle with inefficient searches. She said it would be nice if there was a way to apply filters that narrow down the possibilities (like when online shopping), so that users don’t have to worry as much about finding the right words to use since they would already be provided.
+ 
+Alyssa also noted that guidebooks sometimes use inaccessible language. Wildlife authors with PhDs in the subject, for instance, may have a hard time realizing that language that makes perfect sense to them might not be as accessible to people without the same vocabulary and breadth of knowledge. For people without an academic background who interact with nature as a hobby, she noted that sometimes it can be difficult to find resources that contain accessible language.
+
  
 ### User Research Method 3: Extreme User Interviews
 
