added secondary research reflections

--- a/p1.md
+++ b/p1.md
@@ -168,6 +168,8 @@ It was very interesting to see that the potential users identified a lot more is
 
 _Extreme User Interviews:_ Using the Extreme User Interviews Research Method was very helpful in getting a lot of feedback about what user’s like, don’t like and what they would like to see differently in a wildflower app. Even with only two people interviewed, a lot of information was collected which will give us insight into designing the app. I believe having more time to contact different users would have been beneficial in collecting a wider range of likes and dislikes. Also, having multiple apps that the potential users could try would allow for more feedback in relation to different designs and have users find more key issues using different systems. It was easy to have the user explore the system in order to find issues and then evaluate their experience using it. I think the users were more critical of the system than they would have been if they didn’t know I was going to be asking about their experience with it. Also, since they knew we did not create the app, they were more willing to share their negative experiences with the wildflower app. If I had to do this research method again, I would like to give the potential users more time to use the app, so that they would not feel rushed and could have more time to give feedback.
 
+_Secondary Research - Customer Reviews Data Mining:_ Given our lack of time, mining customer reviews was a great resource. We were able to get a large quantity of data about what users actually thought about a product. We were able to see that the identification/searching feature and ease of use were among the most important to the users. We learned different reasons and ways the apps were used. However, we were only able to look at a fraction of the available apps, qualitatively. Many reviews did not contain meaningful information, and a large number of users only rated the app. With more time and data mining algorithms, we could have had a much larger data set, and analyzed the data quantitatively as well, giving us a more accurate sense of how users feel about the current apps.
+
 ## Task Descriptions
 
 Brent is a tech savvy individual who enjoys being outdoors and learning about nature around him. He starts walking in Fish Creek Park and sees a flower that draws his attention. He wants to get out his field guide and determine the common name (doesn’t care about the scientific name), whether it is common or rare, if it is a native flower or if it was brought to this location by others, if it is invasive poisonous/harmful, any interesting facts or stories surrounding this flower (like corpse plant that doesn’t bloom annually and smells like rotting flesh). He would like to save an image of it with a date stamp, month, day, year, time and location and be able to share it to friends.
