--- a/p1.md
+++ b/p1.md
@@ -51,9 +51,12 @@ _Method description_: We interviewed Alyssa and Wesley, a couple in their twenti
  
 _Major findings_: Many plants look similar but are very different in other less visible characteristics, so relying on visual characteristics alone is not always the best when it comes to identifying a plant. Feeling, smelling, and sometimes tasting the plant can also provide valuable information that can be used for identification. Alyssa also noted that many guides only provide one image of the flower, when it might also be helpful to be able to examine magnified images of the leaves, petals, or stems. Wesley also added that a flower may look different depending on its current stage in life, so perhaps including images of its various life stages might be helpful (since people do not always come across a flower when it is in full bloom).
  
-Guides also vary widely in the way that plants are organized. One of Alyssa’s favourite books on plant identification had the plants organized in alphabetical order; another book that she liked had the plants organized by categories such as “medicinal.” She noted that alphabetical order is nice when she already knows what she’s looking for and just wants to learn more about it. Otherwise, she usually flips through the pages and looks at pictures/reads descriptions until finding something that seems right. I asked her what she might type into a Google search on her phone if she was outside and wanted to identify a flower, and she mentioned that a lot of people don’t exactly know what words to use to describe what they mean in the first place. Leaving users to come up with descriptive words on their own might lead them to struggle with inefficient searches. She said it would be nice if there was a way to apply filters that narrow down the possibilities (like when online shopping), so that users don’t have to worry as much about finding the right words to use since they would already be provided.
+Guides also vary widely in the way that plants are organized. One of Alyssa’s favourite books on plant identification had the plants organized in alphabetical order; another book that she liked had the plants organized by categories such as “medicinal.” She noted that alphabetical order is nice when she already knows what she’s looking for and just wants to learn more about it. Otherwise, she usually flips through the pages and looks at pictures/reads descriptions until finding something that seems right.
  
-Alyssa also noted that guidebooks sometimes use inaccessible language. Wildlife authors with PhDs in the subject, for instance, may have a hard time realizing that language that makes perfect sense to them might not be as accessible to people without the same vocabulary and breadth of knowledge. For people without an academic background who interact with nature as a hobby, she noted that sometimes it can be difficult to find resources that contain accessible language.
+When asked what she might type into a Google search on her phone if she was outside and wanted to identify a flower, and she mentioned that a lot of people don’t exactly know what words to use to describe what they mean in the first place. Leaving users to come up with descriptive words on their own might lead them to struggle with inefficient searches. She said it would be nice if there was a way to apply filters that narrow down the possibilities (like when online shopping), so that users don’t have to worry as much about finding the right words to use since they would already be provided. One problem she also mentioned with using online searches is that the user might not think to include their location in the search, or the search engine might not take location into consideration when displaying results. She said that a lot of plants may look very similar but grow in very different parts of the world. People doing searches might come to incorrect conclusions when they find a plant online that looks a lot like the one in front of them, without realizing that it can’t be the correct one since it actually does not grow anywhere near the person’s current location.
+ 
+Alyssa also noted that guidebooks sometimes use language that is too complex. Wildlife authors with PhDs in the subject, for instance, may not realize that language that makes perfect sense to them may not be as clear to people who don’t have the same vocabulary and breadth of knowledge. For people without an academic background who interact with nature as a hobby, it can be difficult to find resources that contain accessible language.
+
 
  
 ### User Research Method 3: Extreme User Interviews
@@ -169,6 +172,8 @@ It was very interesting to see that the potential users identified a lot more is
 _Extreme User Interviews:_ Using the Extreme User Interviews Research Method was very helpful in getting a lot of feedback about what user’s like, don’t like and what they would like to see differently in a wildflower app. Even with only two people interviewed, a lot of information was collected which will give us insight into designing the app. I believe having more time to contact different users would have been beneficial in collecting a wider range of likes and dislikes. Also, having multiple apps that the potential users could try would allow for more feedback in relation to different designs and have users find more key issues using different systems. It was easy to have the user explore the system in order to find issues and then evaluate their experience using it. I think the users were more critical of the system than they would have been if they didn’t know I was going to be asking about their experience with it. Also, since they knew we did not create the app, they were more willing to share their negative experiences with the wildflower app. If I had to do this research method again, I would like to give the potential users more time to use the app, so that they would not feel rushed and could have more time to give feedback.
 
 _Secondary Research - Customer Reviews Data Mining:_ Given our lack of time, mining customer reviews was a great resource. We were able to get a large quantity of data about what users actually thought about a product. We were able to see that the identification/searching feature and ease of use were among the most important to the users. We learned different reasons and ways the apps were used. However, we were only able to look at a fraction of the available apps, qualitatively. Many reviews did not contain meaningful information, and a large number of users only rated the app. With more time and data mining algorithms, we could have had a much larger data set, and analyzed the data quantitatively as well, giving us a more accurate sense of how users feel about the current apps.
+
+_Interview_: Recording the interview while only writing a few words helped the interview feel less formal and more conversational. Since we interviewed them in their home, they were able to pull books off their bookshelf and show them to me to illustrate what they were talking about, or to provide clarification when I had follow-up questions. They were able to provide a lot of insight to things we would never have thought of on our own (such as the fact that plants look different at different stages of its life). While it was comfortable and convenient to interview them in their home, the interview could have been improved if we could also have accompanied them to a park afterwards, so we could have seen how they approached their examination of flowers or other plants.
 
 ## Task Descriptions
 
