--- a/p1.md
+++ b/p1.md
@@ -19,11 +19,20 @@ _provide a list of stakeholders, and describe them as they relate to the design 
 
 _discuss the user research methods you used, provide justification for them_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
 
-### User Research Method 1: ...
+### User Research Method 1: Secondary Research - Customer Reviews Data Mining
 
 ![](http://lorempixel.com/1200/300/ "Motivational image")
 
-_summary of findings_ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit metus nisl, eget dapibus enim commodo a. Nam nisl dui, volutpat vitae auctor vitae, dignissim ut lacus. Quisque semper, tortor porttitor eleifend consectetur, elit libero rutrum augue, nec porttitor justo tortor quis nulla. Etiam hendrerit pellentesque justo, sed venenatis tellus porttitor ut. Vestibulum blandit urna a ante rhoncus condimentum. Vestibulum luctus tincidunt velit, at porttitor arcu pulvinar vel. Fusce vel lacus eros. Morbi sagittis consectetur malesuada. Fusce a est varius, facilisis dui in, aliquet metus. Cras vitae ex non enim ultrices dictum eu sed quam. Integer bibendum velit sed nunc rutrum, quis tincidunt orci tincidunt. Aliquam a suscipit nulla. Nam leo velit, suscipit a enim sit amet, convallis sagittis diam. Curabitur euismod augue non libero accumsan, id gravida ante dictum. Aenean ac arcu lobortis, rutrum sapien a, venenatis diam. Phasellus molestie nunc sit amet ex maximus, vel ultricies lacus ultrices.
+_Justification:_ There are a multitude of field guide apps spanning different geographic locations and species currently available. A great way to gather a significant volume of user experiences in a short period of time is to mine the customer reviews for these apps. The anonymity of online reviews give users a chance to voice their specific likes and dislikes in a candid fashion. This provides invaluable information when designing an app with these users in mind. To focus our analysis we chose to gather key features of the apps that users voiced their opinions on.
+ 
+_Method description:_ We searched for wildflower field guide apps in Google Play with the keyword “wildflower app”. The four highest reviewed apps were chosen for analysis (see table for details on the chosen apps). The highest had 97 reviews (203 ratings), whereas the lowest had seven reviews (19 ratings). Once the reviews were collected, they were read through and categorized based on feature. For example, a review (or part of a review) stating “very intuitive, works with little effort” was categorized in the ‘ease of use’ feature, “needs bigger thumbnail pictures” was categorized under the ‘images’ feature. 
+ 
+_Major findings:_ The two most important features were ‘identification/searching’ and ‘ease of use’. The lowest rated app, with an overall rating of 2.3/5.0 based on 29 ratings (11 reviews), had mainly complaints on these two features. Incorrect or inconclusive search results coupled with failure for users to easily grasp the controls led them to describe this app as “worthless”, “useless” or a “waste of time”. Users of the other three apps, with ratings between 4.4 and 5.0/5.0, felt more positive about these features in general albeit with some issues. Some users found the searching features were able to efficiently and accurately narrow the results based on the plant characteristics they entered. Others suggested a few improvements, for example “might only suggest a favorites list function for a future update”. The Wild Flower Id app was the only app that used an automatic recognition algorithm that identified plants by taking a photo. Users enjoyed this feature when it worked for them, however, it ruined their experience when this feature did not work, “would be 5 stars if the auto recognition worked”.
+ 
+On any app, the users were not in agreement on either the quantity or the detail of the descriptions of the wildflower databases. This largely depends on their knowledge level and how they intended to use the app.  One user used their app as a quick reminder of plant names, while another used theirs as an aid for their herbal medicine course. The developers were regularly updating and increasing the databases, based on user feedback. Developers have to balance how large to make the database and how much memory the app uses. Knowledge levels and intended use differ wildly, making this feature tricky to design for a wide user base. 
+ 
+Images were another major feature. Users prefer multiple, good quality, and aesthetically pleasing images of any given plant. Many felt positive about the images provided. Not being able to enlarge the images was the major complaint with this feature. The apps were mainly used on a hike, or a walk in a field or countryside. One user pointed out that they liked that their app did not need to be connected to a network.
+
 
 
 
