--- a/p1.md
+++ b/p1.md
@@ -25,7 +25,7 @@ _discuss the user research methods you used, provide justification for them_ Lor
 
 _Justification:_ There are a multitude of field guide apps spanning different geographic locations and species currently available. A great way to gather a significant volume of user experiences in a short period of time is to mine the customer reviews for these apps. The anonymity of online reviews give users a chance to voice their specific likes and dislikes in a candid fashion. This provides invaluable information when designing an app with these users in mind. To focus our analysis we chose to gather key features of the apps that users voiced their opinions on.
  
-_Method description:_ We searched for wildflower field guide apps in Google Play with the keyword “wildflower app”. The four highest reviewed apps were chosen for analysis (see table for details on the chosen apps). The highest had 97 reviews (203 ratings), whereas the lowest had seven reviews (19 ratings). Once the [reviews were collected](https://github.com/kowther/FieldGuide-481/blob/master/customer_reviews_raw_data.pdf), they were read through and categorized based on feature. For example, a review (or part of a review) stating “very intuitive, works with little effort” was categorized in the ‘ease of use’ feature, “needs bigger thumbnail pictures” was categorized under the ‘images’ feature. 
+_Method description:_ We searched for wildflower field guide apps in Google Play with the keyword “wildflower app”. The four highest reviewed apps were chosen for analysis (see table for details on the chosen apps). The highest had 97 reviews (203 ratings), whereas the lowest had seven reviews (19 ratings). Once the [reviews were collected](https://github.com/kowther/FieldGuide-481/blob/master/customer_reviews_raw_data.pdf), they were read through and [categorized based on feature](https://github.com/kowther/FieldGuide-481/blob/master/feature_analysis.pdf). For example, a review (or part of a review) stating “very intuitive, works with little effort” was categorized in the ‘ease of use’ feature, “needs bigger thumbnail pictures” was categorized under the ‘images’ feature. 
  
 _Major findings:_ The two most important features were ‘identification/searching’ and ‘ease of use’. The lowest rated app, with an overall rating of 2.3/5.0 based on 29 ratings (11 reviews), had mainly complaints on these two features. Incorrect or inconclusive search results coupled with failure for users to easily grasp the controls led them to describe this app as “worthless”, “useless” or a “waste of time”. Users of the other three apps, with ratings between 4.4 and 5.0/5.0, felt more positive about these features in general albeit with some issues. Some users found the searching features were able to efficiently and accurately narrow the results based on the plant characteristics they entered. Others suggested a few improvements, for example “might only suggest a favorites list function for a future update”. The Wild Flower Id app was the only app that used an automatic recognition algorithm that identified plants by taking a photo. Users enjoyed this feature when it worked for them, however, it ruined their experience when this feature did not work, “would be 5 stars if the auto recognition worked”.
  
