--- a/p1.md
+++ b/p1.md
@@ -1,6 +1,6 @@
 # P1: User Research
 
-![](https://github.com/kowther/FieldGuide-481/blob/master/wildflower_small.png)
+![](https://kowther/FieldGuide-481/blob/master/wildflower_small.png)
 ## Project Idea
 
 A guide to identify, learn and share Alberta’s 1000+ species of wildflowers. Enjoy all the familiarities of a traditional paper field guide, with more images and species information. Foster a community via the app, where users can share sightings, images and connect with each other.
@@ -22,11 +22,11 @@ _discuss the user research methods you used, provide justification for them_ Lor
 
 ### User Research Method 1: Secondary Research - Customer Reviews Data Mining
 
-![](https://github.com/kowther/FieldGuide-481/blob/master/wildflower_apps.png)
+![](https://kowther/FieldGuide-481/blob/master/wildflower_apps.png)
 
 _Justification:_ There are a multitude of field guide apps spanning different geographic locations and species currently available. A great way to gather a significant volume of user experiences in a short period of time is to mine the customer reviews for these apps. The anonymity of online reviews give users a chance to voice their specific likes and dislikes in a candid fashion. This provides invaluable information when designing an app with these users in mind. To focus our analysis we chose to gather key features of the apps that users voiced their opinions on.
  
-_Method description:_ We searched for wildflower field guide apps in Google Play with the keyword “wildflower app”. The four highest reviewed apps were chosen for analysis (see table for details on the chosen apps). The highest had 97 reviews (203 ratings), whereas the lowest had seven reviews (19 ratings). Once the [reviews were collected](https://github.com/kowther/FieldGuide-481/blob/master/customer_reviews_raw_data.pdf), they were read through and [categorized based on feature](https://github.com/kowther/FieldGuide-481/blob/master/feature_analysis.pdf). For example, a review (or part of a review) stating “very intuitive, works with little effort” was categorized in the ‘ease of use’ feature, “needs bigger thumbnail pictures” was categorized under the ‘images’ feature. 
+_Method description:_ We searched for wildflower field guide apps in Google Play with the keyword “wildflower app”. The four highest reviewed apps were chosen for analysis (see table for details on the chosen apps). The highest had 97 reviews (203 ratings), whereas the lowest had seven reviews (19 ratings). Once the [reviews were collected](https://kowther/FieldGuide-481/blob/master/customer_reviews_raw_data.pdf), they were read through and [categorized based on feature](https://kowther/FieldGuide-481/blob/master/feature_analysis.pdf). For example, a review (or part of a review) stating “very intuitive, works with little effort” was categorized in the ‘ease of use’ feature, “needs bigger thumbnail pictures” was categorized under the ‘images’ feature. 
  
 _Major findings:_ The two most important features were ‘identification/searching’ and ‘ease of use’. The lowest rated app, with an overall rating of 2.3/5.0 based on 29 ratings (11 reviews), had mainly complaints on these two features. Incorrect or inconclusive search results coupled with failure for users to easily grasp the controls led them to describe this app as “worthless”, “useless” or a “waste of time”. Users of the other three apps, with ratings between 4.4 and 5.0/5.0, felt more positive about these features in general albeit with some issues. Some users found the searching features were able to efficiently and accurately narrow the results based on the plant characteristics they entered. Others suggested a few improvements, for example “might only suggest a favorites list function for a future update”. The Wild Flower Id app was the only app that used an automatic recognition algorithm that identified plants by taking a photo. Users enjoyed this feature when it worked for them, however, it ruined their experience when this feature did not work, “would be 5 stars if the auto recognition worked”.
  
@@ -39,21 +39,21 @@ Images were another major feature. Users prefer multiple, good quality, and aest
 
 ### User Research Method 2: Interview
 
-![](https://github.com/kowther/FieldGuide-481/blob/master/interview03.jpg)
+![](https://kowther/FieldGuide-481/blob/master/interview03.jpg)
 
 _Interviewees Alyssa and Wesley_
 
-![](https://github.com/kowther/FieldGuide-481/blob/master/interview04.jpg)
+![](https://kowther/FieldGuide-481/blob/master/interview04.jpg)
 
 _Interviewee Alyssa showing her favourite field guides_
 
-![](https://github.com/kowther/FieldGuide-481/blob/master/interview05.jpg)
+![](https://kowther/FieldGuide-481/blob/master/interview05.jpg)
 
 _Interviewer Stephanie and interviewee Alyssa_
 
 Raw notes from interview:
-* [Page 1](https://github.com/kowther/FieldGuide-481/blob/master/interview01.jpg)
-* [Page 2](https://github.com/kowther/FieldGuide-481/blob/master/interview02.jpg)
+* [Page 1](https://kowther/FieldGuide-481/blob/master/interview01.jpg)
+* [Page 2](https://kowther/FieldGuide-481/blob/master/interview02.jpg)
 
 _Justification_: Since a potential user of our system is interested in wildflowers but might not have a lot of technical knowledge about them, we wanted to gain insight from someone whose experience with plants is mostly recreational. Our main goal for the interview was to find out what tools they use to find information, and what they like or dislike about the resources that currently exist.
  
@@ -71,17 +71,17 @@ Alyssa also noted that guidebooks sometimes use language that is too complex. Wi
  
 ### User Research Method 3: Extreme User Interviews
 
-![](https://github.com/kowther/FieldGuide-481/blob/master/6.jpg)
+![](https://kowther/FieldGuide-481/blob/master/6.jpg)
 _Entrance to Fish Creek Park, Bebo Grove_
-![](https://github.com/kowther/FieldGuide-481/blob/master/5.jpg)
+![](https://kowther/FieldGuide-481/blob/master/5.jpg)
 _Wildflower located in Fish Creek Park, Bebo Grove_
-![](https://github.com/kowther/FieldGuide-481/blob/master/2.jpg)
+![](https://kowther/FieldGuide-481/blob/master/2.jpg)
 _Interviewee Brent getting ready to use the Alberta Wildlife App_
-![](https://github.com/kowther/FieldGuide-481/blob/master/1.jpg)
+![](https://kowther/FieldGuide-481/blob/master/1.jpg)
 _Interviewee Brent correctly identified the Buffalo Bean Wildflower in Fish Creek Park_
-![](https://github.com/kowther/FieldGuide-481/blob/master/3.jpg)
+![](https://kowther/FieldGuide-481/blob/master/3.jpg)
 _Interviewee Lorraine getting ready to use the Alberta Wildlife App_
-![](https://github.com/kowther/FieldGuide-481/blob/master/7.jpg)
+![](https://kowther/FieldGuide-481/blob/master/7.jpg)
 _Interviewee Lorraine correctly identified the Canadian Bunchberry. (This was completed indoors as there was a rain storm the day we did the interview. An image of the Canadian Bunchberry that is located in Fish Creek Park was printed and used to identify from.)_
 
 _Justification:_ One of the best ways to determine what end users need in an app, is to have them use a similar system and then interview them to determine what worked, what didn’t work, and what they would like to see in a better app. Therefore, the Extreme User Interviews Research Method would be a great way to collect information in order to make a wildflower app that encompasses what different users of the app would want.
